Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1258,7 +1258,7 @@ body {
     <!-- Bottom Buttons -->
     <div class="btn-group">
       <button id="btnHome" class="btn btn-secondary">🏠 HOME</button>
-      <button id="btnDonate" class="btn btn-primary">💝 DONASI</button>
+      <button id="btnDonate" class="btn btn-primary">💝 SUPPORT</button>
     </div>
   </div>
 </section>
@@ -1876,4 +1876,5 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
