Change greeting from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -43,15 +43,16 @@
 <meta name="keywords" content="prediksi togel, togel jitu, togel 4d, prediksi angka, angka main, bocoran togel, AI prediksi, togel hari ini">
 <meta name="author" content="AI Prediksi">
 
-<!-- Open Graph / Facebook -->
-<meta property="og:image" content="https://ogcdn.net/4a7c2c6c-4259-45a6-8d39-5e9d9c3b7c4a/v3/yourdomain.com/AI%20Prediksi%20Togel%204D/Analisis%20Pola%20%26%20Probabilitas/https%3A%2F%2Fimg.icons8.com%2Fcolor%2F96%2F000000%2Fartificial-intelligence.png/og.png">
+<!-- OPEN GRAPH / FACEBOOK -->
+<meta property="og:image" content="https://i.ibb.co.com/ynN59GsV/603923056-712413455259698-4298633270059001292-n.jpg">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
-<meta property="og:image:alt" content="AI Prediksi Togel 4D">
+<meta property="og:image:alt" content="AI Prediksi Togel 4D - Angka Jitu">
 
-<!-- Twitter -->
-<meta property="twitter:image" content="https://ogcdn.net/4a7c2c6c-4259-45a6-8d39-5e9d9c3b7c4a/v3/yourdomain.com/AI%20Prediksi%20Togel%204D/Analisis%20Pola%20%26%20Probabilitas/https%3A%2F%2Fimg.icons8.com%2Fcolor%2F96%2F000000%2Fartificial-intelligence.png/twitter.png">
+<!-- TWITTER CARD -->
 <meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:image" content="https://i.ibb.co.com/ynN59GsV/603923056-712413455259698-4298633270059001292-n.jpg">
+<meta property="twitter:image:alt" content="AI Prediksi Togel 4D">
 
 <!-- Schema.org untuk Google -->
 <script type="application/ld+json">
@@ -1876,5 +1877,6 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
