Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -43,16 +43,26 @@
 <meta name="keywords" content="prediksi togel, togel jitu, togel 4d, prediksi angka, angka main, bocoran togel, AI prediksi, togel hari ini">
 <meta name="author" content="AI Prediksi">
 
-<!-- OPEN GRAPH / FACEBOOK -->
-<meta property="og:image" content="https://i.ibb.co.com/ynN59GsV/603923056-712413455259698-4298633270059001292-n.jpg">
-<meta property="og:image:width" content="1200">
-<meta property="og:image:height" content="630">
-<meta property="og:image:alt" content="AI Prediksi Togel 4D - Angka Jitu">
+<!-- Google Search Console Verification Tag -->
+<meta name="google-site-verification" content="5CMRUWVVYp3L1HT7X0rGRySGEhD59oFO4nDby97eM2s">
+  
+<!-- Open Graph / Facebook (WAJIB untuk WhatsApp juga) -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://prediksitogel.vercel.app/"> <!-- GANTI DENGAN URL LIVE ANDA -->
+    <meta property="og:title" content="AI Prediksi Togel Jitu 4D - Angka Main Akurat">
+    <meta property="og:description" content="🎯 Prediksi Togel 4D menggunakan Artificial Intelligence. Dapatkan angka jitu hari ini.">
+    <meta property="og:image" content="https://i.ibb.co.com/ynN59GsV/603923056-712413455259698-4298633270059001292-n.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="AI Prediksi Togel 4D">
+    <meta property="og:site_name" content="AI Prediksi Togel">
 
-<!-- TWITTER CARD -->
-<meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:image" content="https://i.ibb.co.com/ynN59GsV/603923056-712413455259698-4298633270059001292-n.jpg">
-<meta property="twitter:image:alt" content="AI Prediksi Togel 4D">
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://prediksitogel.vercel.app/"> <!-- GANTI DENGAN URL LIVE ANDA -->
+    <meta name="twitter:title" content="AI Prediksi Togel Jitu 4D">
+    <meta name="twitter:description" content="🎯 Prediksi angka togel akurat dengan teknologi AI.">
+    <meta name="twitter:image" content="https://i.ibb.co.com/ynN59GsV/603923056-712413455259698-4298633270059001292-n.jpg">
 
 <!-- Schema.org untuk Google -->
 <script type="application/ld+json">
@@ -1877,6 +1887,7 @@ window.addEventListener('load', () => {
 </body>
 
 </html>
+
 
 
 
